# -CoreOS_POSIX

./: .gitignore  README.md  pyproject.toml
src/: index.py
src/Data/: Config.py
src/Karnel/: KarnelTools.py
src/POSIX/: Hadware.py  Permision.py  ShellTools.py
src/moduleControl/: ModuleControl.py
